--- a/package.json
+++ b/package.json
@@ -19,9 +19,13 @@
   },
   "homepage": "https://github.com/ZhuochengLin/CS5610-Project-Server#readme",
   "dependencies": {
+    "@types/cors": "^2.8.12",
     "@types/express": "^4.17.13",
     "@types/node": "^17.0.23",
+    "cors": "^2.8.5",
+    "dotenv": "^16.0.0",
     "express": "^4.17.3",
+    "express-session": "^1.17.2",
     "mongoose": "^6.2.8",
     "ts-node": "^10.7.0",
     "typescript": "^4.6.2"
