--- a/package.json
+++ b/package.json
@@ -22,10 +22,12 @@
     "@types/cors": "^2.8.12",
     "@types/express": "^4.17.13",
     "@types/node": "^17.0.23",
+    "bcrypt": "^5.0.1",
     "cors": "^2.8.5",
     "dotenv": "^16.0.0",
     "express": "^4.17.3",
     "express-session": "^1.17.2",
+    "got": "^11.8.3",
     "mongoose": "^6.2.8",
     "ts-node": "^10.7.0",
     "typescript": "^4.6.2"
